--- a/3-InstruccionSwitch/InstruccionSwitch-06.html
+++ b/3-InstruccionSwitch/InstruccionSwitch-06.html
@@ -38,7 +38,7 @@
    	
 		<form class=" animated bounceInLeft FormIngreso">
 		<h1>Ingrese la hora del d&iacute;a</h1>
-					<input type="text"  placeholder="Ingrese hora del d&iacute;a" id="txtIdHora">
+					<input type="time"  placeholder="Ingrese hora del d&iacute;a" id="txtIdHora">
 		
 			
 			<a  class="MiBotonUTNnav"  onclick="mostrar()" >Mostrar  informaci&oacute;n</a>
